# lidar_closest_distance_detector

./: .gitignore  LICENSE  README.md  push_master.sh  push_vrep.sh
lcdd_bundle_start/: CMakeLists.txt  package.xml
lcdd_bundle_start/launch/: bundle_all.launch  bundle_lidar.launch  bundle_lidar_loam.launch  bundle_robot_space_ring.launch
lcdd_bundle_start/rviz/: lcdd.rviz
lcdd_loam/: CMakeLists.txt  package.xml
lcdd_loam/launch/: lcdd_loam.launch
lcdd_loam/rviz/: lcdd_loam.rviz
lcdd_loam/script/: map2odom_publisher.py
lcdd_loam/src/: lcdd_laserMapping.cpp  lcdd_laserOdometry.cpp  lcdd_scanRegistration.cpp  lcdd_transformMaintenance.cpp
lcdd_ring_noise_remover/: CMakeLists.txt  package.xml
lcdd_ring_noise_remover/src/: ring_noise_remover_node.cpp
lcdd_robot_description/: CMakeLists.txt  package.xml
lcdd_robot_description/launch/: robot_description_camera.launch
lcdd_robot_description/urdf/: camera.urdf.xacro
lcdd_space_filter/: CMakeLists.txt  package.xml
lcdd_space_filter/src/: space_filter.cpp
lidar_closest_distance_detector/: CMakeLists.txt  nodelet_plugins.xml  package.xml
lidar_closest_distance_detector/include/: convex_polygon.h  distance_detector.h  filtering.h  registration.h  segmentation.h
lidar_closest_distance_detector/launch/: lidar_closest_distance_detector.launch
lidar_closest_distance_detector/src/: convex_polygon.cpp  convex_polygon_node.cpp  distance_detector.cpp  filtering.cpp  registration.cpp  segmentation.cpp
