<?xml version="1.0"?>
<package format="2">
  <name>lcdd_bundle_start</name>
  <version>0.0.0</version>
  <description>The lcdd_bundle_start package</description>

  <maintainer email="edwardim@snu.ack.kr">Edward Gyu Beom Im</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <export>

  </export>
</package>
