<?xml version="1.0"?>
<package format="2">
  <name> lcdd_ring_noise_remover </name>
  <version>0.0.0</version>
  <description>The lcdd_ring_noise_remover package</description>

  <maintainer email="edwardim@snu.ac.kr">Edward Gyu Beom Im</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
