<?xml version="1.0"?>
<package format="2">
  <name>lcdd_robot_description</name>
  <version>0.0.0</version>
  <description>The lcdd_robot_description package</description>

  <maintainer email="edwardim@snu.ac.kr">Edward Gyu Beom Im</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
